export abstract class AbstractEntity {
    // for stretch goal use
}