@startuml

' Abstract class
abstract class AbstractEntity {
}

' Enum for UserRole
enum UserRole {
    ADMIN
    STAFF
}

' Class definitions
class User extends AbstractEntity {
    -userId : number
    -userName : string
    -firstName : string
    -lastName : string
    -email : string
    -buildingId : number
    -floor : number
    -isActive : boolean
    -userRoles : UserRole[]
    -bookings : Booking[]
}

class Room extends AbstractEntity {
    -roomId : number
    -buildingId : number
    -floorNumber : number
    -roomNumber : string
    -roomName : string
    -numberOfSeats : number
    -isActive : boolean
    -equipments : Equipment[]
    -bookings : Booking[]
}

class Equipment extends AbstractEntity {
    -equipmentId : string
    -description : string
}

class City extends AbstractEntity {
    -cityId : string
    -cityName : string
    -provinceState : string
    -buildings : Building[]
}

class Building extends AbstractEntity {
    -buildingId : number
    -cityId : string
    -buildingNumber : string
    -address : string
    -lon : number
    -lat : number
    -isActive : boolean
    -rooms : Room[]
    -users : User[]
}

class Booking extends AbstractEntity {
    -bookingId : number
    -createdBy : number
    -createdAt : Date
    -startTime : Date
    -duration : number
    -status : string
}

' Relationships
User "1" -- "*" UserRole : >
User "1" -- "*" Booking : >
Room "1" -- "*" Equipment : >
Room "1" -- "*" Booking : >
City "1" -- "*" Building : >
Building "1" -- "*" Room : >
Building "1" -- "*" User : >

@enduml